app configurations done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Utility Packages
+  http: ^1.1.0
+  intl: ^0.18.1
+  logger: ^2.0.1
+  url_launcher: ^6.1.12
+
+  #icons
+  iconsax: ^0.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+
+  #State Management 
+  get: ^4.6.5
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
